<resources>
    <string name="app_name">Project</string>
    <string name="email">Email</string>
    <string name="rate_a_movie">Rate a movie</string>
    <string name="comment">Comment</string>
    <string name="give_rating">Give Rating</string>
    <string name="name">Name</string>
    <string name="change_username">Change username</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_user_info">Edit User Info</string>
    <string name="settings">Settings</string>
    <string name="movie_app">Movie app</string>
    <string name="username">Username</string>
    <string name="buttonCreateUser">Create user</string>
    <string name="changeLang">Change Language</string>
    <string name="spinnerListMoviesByRating">List movies by rating</string>
    <string name="movieApp">Movie app</string>
    <string name="signIn">Sign In</string>
    <string name="mainPage">Main Page</string>
    <string name="showCurrentMovies">Show current movies</string>
    <string name="listMoviesByRating">List movies by rating</string>
    <string name="rateAMovie">Rate a movie</string>
    <string name="settings">Settings</string>
    <string name="comment">Comment</string>
    <string name="rate">Rate</string>
    <string name="editUserInfo">Edit User Info</string>
    <string name="signOut">Sign Out</string>
    <string name="deleteAccount">Delete account</string>
    <string name="changePassword">Change password</string>
    <string name="changeUsername">Change username</string>
    <string name="showOtherUsers">Show other users</string>
    <string name="authenticationError">Authentication error:</string>
    <string name="authenticationSucceed">Authentication Succeed:</string>
    <string name="authenticationFailed">Authentication failed:</string>
    <string name="sign_in_with_fingerprint">Sign in with fingerprint</string>
    <string name="click_button_to_sign_in_with_fingerprint">Click button to sign in with fingerprint</string>
    <string name="chooseLanguage">Choose Language</string>
    <string name="biometricAuthentication">Biometric authentication</string>
    <string name="loginUsingFingerprintAuthentication">"Login using fingerprint authentication"</string>
    <string name="userAppPassword">User App Password</string>


    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="textview">TextView</string>
    <string name="password">Password</string>
    <string name="main_page">Main page</string>
    <string name="show_current_movies">Show current movies</string>
    <string name="list_movies_by_rating">List movies by rating</string>
    <string name="create_user">Create user</string>

    <string-array name="movies">
        <item>Batman</item>
        <item>Poirot</item>
    </string-array>


    <string-array name="ratings">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>
</resources>